--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ name }}'s Watchlist</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
 </head>
 <body>
-<h2>{{ name }}'s Watchlist</h2>
+<h2>
+    <img src="{{ url_for('static',filename='images/avatar.png') }}" alt="Avatar" width="40px">
+    {{ name }}'s Watchlist
+</h2>
 {# 使用 length 过滤器获取 movies 变量的长度 #}
 <p>{{ movies|length }} Titles</p>
-<ul>
+<ul class="movie-list">
     {% for movie in movies %}{# 迭代 movies 变量 #}
         <li>{{ movie.title }} - {{ movie.year }}</li>{# 等同于 movie['title'] #}
         {# 这里的缩进只是为了可读性，不是必须的 #}
     {% endfor %}
 </ul>
+<img class="totoro" src="http://helloflask.com/totoro.gif" alt="Walking Totoro">
 <footer>
     <small>&copy;2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
 </footer>
