--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
-</head>
-<body>
-<h2>
-    <img src="{{ url_for('static',filename='images/avatar.png') }}" alt="Avatar" width="40px">
-    {{ user.name }}'s Watchlist
-</h2>
-{# 使用 length 过滤器获取 movies 变量的长度 #}
-<p>{{ movies|length }} Titles</p>
-<ul class="movie-list">
-    {% for movie in movies %}{# 迭代 movies 变量 #}
-        <li>{{ movie.title }} - {{ movie.year }}</li>{# 等同于 movie['title'] #}
-        {# 这里的缩进只是为了可读性，不是必须的 #}
-    {% endfor %}
-</ul>
-<img class="totoro" src="http://helloflask.com/totoro.gif" alt="Walking Totoro">
-<footer>
-    <small>&copy;2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
-</footer>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    {# 使用 length 过滤器获取 movies 变量的长度 #}
+    <p>{{ movies|length }} Titles</p>
+    <ul class="movie-list">
+        {% for movie in movies %}{# 迭代 movies 变量 #}
+            <li>{{ movie.title }} - {{ movie.year }}{# 等同于 movie['title'] #}
+                {# 这里的缩进只是为了可读性，不是必须的 #}
+                <span class="float-right">
+                    <a class="imdb" href="http://www.imdb.com/find?q={{ movie.title }}"
+                       target="_blank" title="Find this movie on IMDB">IMDB</a>
+                </span>
+            </li>
+        {% endfor %}
+    </ul>
+    <img class="totoro" src="http://helloflask.com/totoro.gif" alt="Walking Totoro">
+{% endblock %}
