--- a/templates/404.html
+++ b/templates/404.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    <link rel="icon" href="{{ url_for('static',filename='images/sachi.png') }}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
-</head>
-<body>
-<h2>
-    <img class='avatar' src="{{ url_for('static',filename='images/avatar.png') }} " alt="Avatar">
-    {{ user.name }}'s Watchlist
-</h2>
-<ul class="movie-list">
-    <li>
-        Page Not Found -404
-        <span class="float-right">
+{% extends 'base.html' %}
+
+{% block content %}
+    <ul class="movie-list">
+        <li>
+            Page Not Found - 404
+            <span class="float-right">
             <a href="{{ url_for('index') }}">Go Back</a>
         </span>
-    </li>
-</ul>
-<footer>
-    <small>&copy;2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
-</footer>
-</body>
-</html>
+        </li>
+    </ul>
+{% endblock %}
