--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 插入到页面标题上方 -->
+    {% for message in get_flashed_messages() %}
+        <div class="alert">{{ message }}</div>
+    {% endfor %}
     {% block head %}
         {# {% block 块名称 %} 作为开始标记，{% endblock %} 或 {% endblock 块名称 %} #}
         <meta charset="UTF-8">
